# mttr-vs-mova

./: .gitignore  LICENSE  Makefile  README.md  _quarto.yml  index.qmd  pyproject.toml  styles.css
docs/: index.html  styles.css
scripts/: 01_generate_data.py  02_simulate_metrics.py  03_build_outputs.py
