[project]
name = "mttr-vs-mova"
version = "0.1.0"
description = "BSides Charm 2026 — Why MTTR Alone Misleads: Add MOVA to Measure Real Risk"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "great-tables>=0.21.0",
    "plotnine>=0.15.3",
    "polars>=1.39.3",
    "pandas>=2.2.0",
    "pyarrow>=23.0.1",
]

[dependency-groups]
dev = ["jupyter>=1.1.1"]
